@@ -5,6 +5,7 @@ HEAD
 ------------------
 - corrected check for Info value on CONNECT_B3_CONF
 - fixed NULL-pointer in cid_name (asterisk 1.6 pickup revealed this)
+- changed action on prodding in .write function to ignore it
 
 chan_capi-1.1.4
 ------------------
